samples/_failures_safe/1761211749_d56216_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46b93630.c: In function ‘main’:
./samples/SAFE/__tmp_46b93630.c:138:17: error: expected expression at end of input
  138 |                 decomp_result = decompress_rle(compressed, (size_t)
      |                 ^~~~~~~~~~~~~
./samples/SAFE/__tmp_46b93630.c:138:33: error: too few arguments to function ‘decompress_rle’
  138 |                 decomp_result = decompress_rle(compressed, (size_t)
      |                                 ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_46b93630.c:67:5: note: declared here
   67 | int decompress_rle(const uint8_t *input, size_t input_len, uint8_t *output, size_t output_size) {
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_46b93630.c:138:17: error: expected declaration or statement at end of input
  138 |                 decomp_result = decompress_rle(compressed, (size_t)
      |                 ^~~~~~~~~~~~~
./samples/SAFE/__tmp_46b93630.c:138:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_46b93630.c:138:17: error: expected declaration or statement at end of input
